fixed date for meal planner and wrapping text for view recipe page

--- a/RecipeProject/recipe-project-web/src/main/resources/static/css/common.css
+++ b/RecipeProject/recipe-project-web/src/main/resources/static/css/common.css
@@ -119,3 +119,8 @@ nav {
     font-size: 12px;
 }
 
+.wrap-text {
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
